# learning

./: Cargo.toml  log4rs.yml
basis/: Cargo.toml
basis/src/: lib.rs  web_server_tide.rs
binary_run/: Cargo.toml
binary_run/src/: main.rs
src/: caseless_tag.rs  common.rs  condition.rs  insert.rs  lib.rs  parser.rs  select.rs
tests/: hyrise-test-queries.txt  lib.rs
