[package]
name = "basis"
version = "0.1.0"
authors = ["dyy <yayi_du@kingdee.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mobc = { version = "0.5", features = ["async-std"] }
anyhow = "1.0.33"
tide = "0.14.0"
async-std = { version = "1.6.0", features = ["attributes"] }
serde = "1.0.117"
serde_json = "1.0"
log = { version = "0.4.0", features = ["std"] }